# vgi-ioc

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
crates/ioc-wasm/: Cargo.toml
crates/ioc-wasm/src/: lib.rs
crates/ioc-worker/: Cargo.toml
crates/ioc-worker/src/: arrow_io.rs  ioc.rs  lib.rs  main.rs  meta.rs
crates/ioc-worker/src/scalar/: classify.rs  extract.rs  fang.rs  mod.rs  version.rs
crates/ioc-worker/src/table/: extract_iocs.rs  mod.rs
crates/ioc-worker/tests/: extract.rs
test/sql/: extract.test  fang.test  iocs.test
wasm/: build.sh
