[workspace]
resolver = "2"
members = ["crates/ioc-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-ioc"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. Pulls in vgi-rpc 0.5 and
# arrow 59 transitively; keep arrow/vgi-rpc here in lockstep with vgi's pins so a
# single arrow/vgi-rpc resolves.
vgi = "0.9.5"
vgi-rpc = { version = "0.7.0", default-features = false, features = ["macros", "http"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

# IOC extraction is pure text processing: regular expressions over UTF-8. No
# native deps. `regex` for robust pattern matching, `once_cell` to compile the
# (immutable) pattern set once on first use.
regex = "1"
once_cell = "1"

[profile.release]
opt-level = 2
