[package]
name = "ioc-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker extracting and defanging/refanging cyber-threat indicators (IOCs) from free text as DuckDB SQL functions"

[[bin]]
name = "ioc-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
regex.workspace = true
once_cell.workspace = true
log = "0.4"
env_logger = "0.11"
